test-suite/tests/roundtrip/invalid/semantic/typecheck/partition/05/via-conjure.expected-error.txt
Error running `conjure pretty`: Error:
    tests/roundtrip/invalid/semantic/typecheck/partition/05/input.essence:5:23:
  |
5 |     together({false}, partition({false}) - (partition() : `partition from bool`))
  |                       ^^^^^^^^^^^^^^^^^^
Type error:
	Expected: "Number / set/ mset / relation / function"
	Got: partition from bool

tests/roundtrip/invalid/semantic/typecheck/partition/05/input.essence:5:44:
  |
5 |     together({false}, partition({false}) - (partition() : `partition from bool`))
  |                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Type error:
	Expected: "Number / set/ mset / relation / function"
	Got: partition from bool

